# LSE-FS-UVigo-extraction-

./: .gitignore  README.md  pyproject.toml
keypoint_extraction_pipeline/: batch_processor.py  main.py
keypoint_extraction_pipeline/config/: config.yaml
keypoint_extraction_pipeline/config/dataset/: combined.yaml  donaciones.yaml  esaude.yaml  fswild.yaml  lex40.yaml  urxencias.yaml
keypoint_extraction_pipeline/config/extractor/: mediapipe_hands.yaml  mediapipe_holistic.yaml
keypoint_extraction_pipeline/config/frame_extractor/: default.yaml
keypoint_extraction_pipeline/config/pipeline/: default.yaml
keypoint_extraction_pipeline/config/saver/: json.yaml
keypoint_extraction_pipeline/config/visualizer/: streamlit.yaml
keypoint_extraction_pipeline/frame_extractors/: extractor.py  opencv_extractor.py
keypoint_extraction_pipeline/keypoint_extractors/: keypoint_extractor.py
keypoint_extraction_pipeline/keypoint_extractors/mediapipe/: hands_extractor.py  holistic_extractor.py
keypoint_extraction_pipeline/loaders/: combined.py  donaciones.py  esaude.py  fswild.py  lex40.py  urxencias.py
keypoint_extraction_pipeline/parsers/: csv_parser.py  elan_parser.py  parser.py
keypoint_extraction_pipeline/savers/: json_saver.py  saver.py
keypoint_extraction_pipeline/schemas/: annotation.py  keypoints.py
keypoint_extraction_pipeline/transformations/: pipeline.py  pipeline_processor.py
keypoint_extraction_pipeline/transformations/operators/: add_wrist_velocity.py  (+4 more)
keypoint_extraction_pipeline/visualizer/: animator.py  app.py  data_loader.py  plotter.py  ui.py
